# gp-trello

./: .gitignore  .trello-index.json  README.md  process-next-card.md  pyproject.toml  requirements.txt  trello-sync.yaml  trello-sync.yaml.example
.cursor/rules/: rules.mdc  trello-indexes.mdc  trello-structure.mdc  trello-sync.mdc  trello-utilities.mdc
docs/: cli-and-workflow.md  roadmap.md
scripts/: check-sync-status.js
src/trello_sync/: __init__.py  main.py
src/trello_sync/cli/: __init__.py  __main__.py  commands.py
src/trello_sync/models/: __init__.py
src/trello_sync/services/: __init__.py  attachments.py  trello_sync.py
src/trello_sync/utils/: __init__.py  config.py  formatting.py  markdown.py
tests/: __init__.py  test_attachments.py  test_config.py  test_config_init.py  test_formatting.py  test_markdown.py  test_trello_sync.py
